# the-jit-calculator-challenge

./: CMakeLists.txt  LICENSE.txt  README.md  dependencies.cmake  project_options.cmake
cmake/: lto.cmake  sanitizers.cmake  warnings.cmake
src/: CMakeLists.txt
src/jit_calculator/: CMakeLists.txt  assembler.cpp  expression.cpp  lexer.cpp  parser.cpp  utils.hpp  x86_x64_system_v_assembler.cpp  x86_x64_system_v_assembler.hpp
src/jit_calculator/include/jit_calculator/: assembler.hpp  expression.hpp  function.hpp  instruction.hpp  jit_calculator.hpp  lexer.hpp  parser.hpp  precedence.hpp  token.hpp  token_type.hpp
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  jit_calculator_tests.cpp
